<resources>
    <string name="app_name">doctor-appointment-app</string>
    <string name="get_started">Continue</string>
    <string name="todo">TODO</string>
    <string name="schedule_appointment_with_ease">Schedule Appointment with Ease</string>
    <string name="hi_shahadot">Hi, Jamal Hossain</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="searching">Searching…</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="see_more">See more</string>
    <string name="qrcode">qrcode</string>
</resources>